[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/obstacles/spike.png" type="Texture" id=1]
[ext_resource path="res://obstacles/Spike.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 280 )

[node name="Spike" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="sprite2" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="hurtbox" type="CollisionPolygon2D" parent="."]
scale = Vector2( 3, 3 )
polygon = PoolVector2Array( -10.282, -9, -6.847, 0, 7.009, 0, 10.608, -9, 3.524, -9, 3.765, -16, -3.319, -16, -3.5, -9 )

[node name="hitbox" type="Area2D" parent="."]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 3.03174 )
shape = SubResource( 1 )

[node name="fallDetection" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallDetection"]
position = Vector2( 0, 250 )
shape = SubResource( 2 )
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="fallDetection" to="." method="_on_fallDetection_body_entered"]
